2005-01-11  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/handlers.sh:
	* data/totem.applications: remove totem.applications, as it's not
	used anymore, and add some handled schemes

2005-01-10  William Jon McCann  <mccann@jhu.edu>

	* src/vanity.c (vanity_action_error): 
	* src/totem.c (totem_action_error, totem_action_error_and_exit): 
	* src/totem-screenshot.c (totem_screenshot_action_error): 
	* src/totem-preferences.c (ask_show_visuals): 
	* src/totem-playlist.c (totem_playlist_error) 
	(totem_playlist_save_files):
	Use GTK 2.5 HIG message dialog API.

2005-01-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	  Fix build.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
	(bacon_video_widget_play):
	  Fix error displays if filenames contains % signs (#!63600).

2005-01-10  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_clear_with_compare),
	(totem_playlist_compare_with_prefix),
	(totem_playlist_clear_with_prefix),
	(totem_playlist_compare_with_volume),
	(totem_playlist_clear_with_gnome_vfs_volume):
	Create a generic playlist clearing function that takes a GCompareFunc
	to match playlist items
	* src/totem-playlist.h:
	* src/totem-private.h:
	* src/totem-uri.c: (totem_create_full_path),
	(totem_action_on_unmount), (totem_setup_file_monitoring):
	* src/totem-uri.h:
	* src/totem.c: (totem_action_exit), (main):
	Remove from the playlist all the items that are on a volume that's
	getting unmounted (Closes: #153209)

2005-01-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_get_metadata):
	  Don't crash on CDINDEX (was already added...).
	* src/metadata-test.c: (main):
	  Call _init.

2005-01-10  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c: (bacon_video_widget_motion_notify),
	(bacon_video_widget_button_press),
	(bacon_video_widget_button_release):