@@ -82,14 +82,6 @@ UI help by Seth Nickell <snickell@stanford.edu>
 FAQ
 ===
 
-Q: Totem doesn't appear in the applications to open videos in Nautilus.
-
-A: You probably installed Totem in a different prefix. Here is how to fix it.
-   $ cd /where/the/totem/sources/are/
-   $ cd data && make user-install
-
-   And it should now. Enjoy.
-
 TODO
 ====
 
