@@ -1,0 +1,44 @@
+application/x-extension-mp4
+video/mp4
+video/dv
+video/mpeg
+video/x-mpeg
+video/msvideo
+video/quicktime
+video/x-anim
+video/x-avi
+video/x-ms-asf
+video/x-ms-wmv
+video/x-msvideo
+video/x-nsv
+video/x-flc
+video/x-fli
+application/ogg
+application/x-ogg
+application/x-matroska
+audio/x-mp3
+audio/x-mpeg
+audio/mpeg
+audio/x-wav
+audio/x-mpegurl
+audio/mpegurl
+audio/x-scpls
+audio/x-m4a
+audio/x-ms-asf
+audio/x-ms-asx
+audio/x-ms-wax
+application/vnd.rn-realmedia
+audio/x-real-audio
+audio/x-pn-realaudio
+application/x-flac
+audio/x-flac
+application/x-shockwave-flash
+misc/ultravox
+audio/vnd.rn-realaudio
+audio/x-pn-aiff
+audio/x-pn-au
+audio/x-pn-wav
+audio/x-pn-windows-acm
+image/vnd.rn-realpix
+video/vnd.rn-realvideo
+audio/x-pn-realaudio-plugin
