@@ -1,220 +1,0 @@
-application/x-extension-mp4
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/mp4
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/dv
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/mpeg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-mpeg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/msvideo
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/quicktime
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-anim
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-avi
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-ms-asf
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-ms-wmv
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-msvideo
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-nsv
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-flc
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/x-fli
-        short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/ogg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/x-ogg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/x-matroska
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-mp3
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-mpeg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/mpeg
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-wav
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-mpegurl
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/mpegurl
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-scpls
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-m4a
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-ms-asf
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-ms-asx
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-ms-wax
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/vnd.rn-realmedia
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-real-audio
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-realaudio
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/x-flac
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-flac
-        short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-application/x-shockwave-flash
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-misc/ultravox
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/vnd.rn-realaudio
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-aiff
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-au
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-wav
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-windows-acm
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-image/vnd.rn-realpix
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-video/vnd.rn-realvideo
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
-audio/x-pn-realaudio-plugin
-	short_list_application_ids_for_novice_user_level=totem
-	short_list_application_ids_for_intermediate_user_level=totem
-	short_list_application_ids_for_advanced_user_level=totem
-
