@@ -1,5 +1,15 @@
 2005-01-11  Bastien Nocera  <hadess@hadess.net>
 
+	* README:
+	* data/Makefile.am:
+	* data/desktop.sh:
+	* data/mime-type-list.txt:
+	* data/schemas.sh:
+	* data/servers.sh:
+	* data/totem.keys: remove totem.keys, as this is for old GNOME versions
+
+2005-01-11  Bastien Nocera  <hadess@hadess.net>
+
 	* data/Makefile.am:
 	* data/handlers.sh:
 	* data/totem.applications: remove totem.applications, as it's not
